--- a/SurveyWeb/bin/WingTipToys.dll.config
+++ b/SurveyWeb/bin/WingTipToys.dll.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -70,7 +70,13 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+            <add name="css fix." path=".CSS" verb="*" type="System.Web.StaticFileHandler" resourceType="File" preCondition="integratedMode" />
+    </handlers>
+        <defaultDocument>
+            <files>
+                <add value="default.html" />
+            </files>
+        </defaultDocument></system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
